v4.9.7
- Useability fixes
- Allow user options to be appended to ovpn files

v4.9.5
- Reconnect timing fixes

v4.9.4
- OSMC/general Linux fixes

v4.9.3
- Fix list of providers

v4.9.2
- Minor bug fixes

v4.9.1
- CoreELEC support matching LibreELEC
- General bug fixes
- Install/uninstall fixes

v4.9.0
- Improved setup wizard
- Improved command checking (Linux)
- Reconnect options
- Check VPN connection during streaming option
- Improved Linux path options

v4.4.2
- Keymap fix

v4.4.1
- Add Windows and Linux ovpn removal tags

v4.4.0
- Username and password checking for bad formatting
- Removed PureVPN support, use their add-on

v4.3.0
- Rewrite keymap to allow other add-ons to use the same zomboided.xml keymap
- Removed speed test function (moved to a different add-on)
- Removed timed reboot and file change reboot (moved to a different add-on)

v4.2.0
- Remove NordVPN support
- Rename keymap file

v4.1.9
- Fix cycle bug

v4.1.8
- Add pop up connection window

v4.1.7
- Optionally force a reconnection on wake
- Add API to output current IP to home window

v4.1.6
- Avoid stopping local media when VPN changes

v4.1.5
- More debug to understand local media stopping playing when VPN changes

v4.1.4
- Quicker 10 second timeout for IP provider requests

v4.1.3
- Fix download but introduced in 4.1.2 for new installs/providers

v4.1.2
- Improved notification of new VPN provider files

v4.1.1
- Add BulletVPN

v4.1.0
- Add black.box
- Fix issue with verb setting being ignored in some UserDefined ovpns
- Improve detection of IP address by adding ipinfo.io
- Reconnect not happening after upgrade bug fixed

v4.0.9
- Fix XML

v4.0.8
- Add VanishedVPN and PrivateVPN

v4.0.7
- Allow import function to see root on Linux

v4.0.6
- Fix upgrade/non-display of locations bug

v4.0.5
- Fix initial platform checking broken in 4.0.4

v4.0.4
- Tracing and platform detection changes

v4.0.3
- Download percentage bar fix
- Try and avoid empty connection lists

v4.0.2