@@ -68,7 +68,7 @@
         <setting label="32047" type="bool" id="vpn_reconnect_while_streaming" visible="eq(-1,false)+eq(-2,true)" default="true"/>
         <setting label="32048" type="bool" id="vpn_stop_media" default="true"/>
         <setting label=""      type="bool" id="vpn_enable_debug" visible="false"/> 
-        <setting label="32049" type="text" id="vpn_stop_ids" visible="eq(-1,true)+eq(-11,)" default="http: https:"/>
+        <setting label="32049" type="text" id="vpn_stream_ids" visible="eq(-1,true)+eq(-11,)" default="http: !http://192.168 https: !https://192.168"/>
         <setting label="32050" type="bool" id="vpn_force_reconnect_after_wake" default="false"/>
         <setting label="32051" type="slider" id="vpn_reconnect_freq" default="60" range="10,10,3600" option="int" />
         <setting label="32052" type="bool" id="vpn_reconnect_next" visible="eq(-14,)" default="false"/>
